all cleaned up, compiles, and the dll will load in love without crashing. that sounds promising.

--- a/Windows/XInputLUA.vcxproj
+++ b/Windows/XInputLUA.vcxproj
@@ -12,11 +12,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\IXInputLUA.h" />
+    <ClInclude Include="..\love_helpers.h" />
     <ClInclude Include="..\wrap_XInputLUA.h" />
     <ClInclude Include="..\XInputLUA.h" />
     <ClInclude Include="XInputLUA.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\love_helpers.cpp" />
     <ClCompile Include="..\wrap_XInputLUA.cpp" />
     <ClCompile Include="XInputLUA.cpp" />
   </ItemGroup>
@@ -48,6 +50,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <TargetExt>.dll</TargetExt>
+    <OutDir>..\..\love2d</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <TargetExt>.dll</TargetExt>
@@ -60,6 +63,7 @@
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>lib\lua.lib;XInput.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -74,6 +78,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>lib\lua.lib;XInput.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
